<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootRequestDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/CftToolbar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        >
        <com.google.android.material.textview.MaterialTextView
            style="@style/CftToolbarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appbar_login"
            />

    </com.google.android.material.appbar.MaterialToolbar>

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"
        android:indeterminateTint="@color/buttonsColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_login"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputName"
            style="@style/CftLoginTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:hint="@string/hint_login"
            app:layout_constraintBottom_toTopOf="@+id/txtInputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/CftLoginTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:hint="@string/hint_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInputName"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="textWebPassword|textNoSuggestions"
                android:maxLines="1"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/CftButton"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>