<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/CftToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="?attr/homeAsUpIndicator">

            <com.google.android.material.textview.MaterialTextView
                style="@style/CftToolbarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appbar_application" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:id="@+id/btnHelp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="end"
                app:iconSize="32dp"
                android:drawableTop="@drawable/ic_help"
                android:drawableTint="?CftButtonsColor"
                app:strokeColor="@android:color/transparent"
                android:textSize="12sp" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/successLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/txtSuccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/request_processing"
            android:layout_margin="16dp"
            android:textSize="@dimen/CftTextHeaderSize"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSuccess"
            style="@style/CftButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_continue"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/requestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputName"
                style="@style/CftLoginTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTxtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputSurname"
                style="@style/CftLoginTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTxtSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/hint_surname"
                    android:inputType="textPersonName"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputPhone"
                style="@style/CftLoginTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clipChildren="false"
                android:clipToPadding="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTxtSPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="@dimen/CftCardViewElevation"
                app:cardCornerRadius="@dimen/CftCardViewCorners">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtHeaderSum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/loan_sum"
                        android:textSize="@dimen/CftTextHeaderSize"
                        app:layout_constraintBottom_toTopOf="@+id/slider"
                        app:layout_constraintEnd_toStartOf="@+id/txtPercent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtPercent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="@dimen/CftTextHeaderSize"
                        app:layout_constraintBottom_toTopOf="@+id/slider"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/txtHeaderSum"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="6 %" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:labelBehavior="gone"
                        app:layout_constraintBottom_toTopOf="@+id/barrierHorizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtHeaderSum" />

                    <Space
                        android:id="@+id/barrierHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/slider" />

                    <TextView
                        android:id="@+id/txtSelectedSum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="@dimen/CftTextHeaderSize"
                        app:layout_constraintBottom_toTopOf="@+id/dividerHorizontal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/barrierHorizontal"
                        app:layout_constraintVertical_bias="0"
                        tools:text="5000 ₽" />

                    <TextView
                        android:id="@+id/txtMaxSum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        tools:text="20000 ₽"
                        android:textSize="@dimen/CftTextHeaderSize"
                        app:layout_constraintBottom_toTopOf="@+id/dividerHorizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/barrierHorizontal"
                        app:layout_constraintVertical_bias="0" />


                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/dividerHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtMaxSum" />

                    <TextView
                        android:id="@+id/txtLoanTermText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/loan_period_header"
                        android:textSize="@dimen/CftTextHeaderSize"
                        app:layout_constraintBottom_toBottomOf="@+id/txtPeriod"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/txtPeriod" />

                    <TextView
                        android:id="@+id/txtPeriod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textSize="@dimen/CftTextHeaderSize"
                        app:layout_constraintBottom_toTopOf="@+id/barrierHorizontal2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dividerHorizontal"
                        tools:text="2 месяца" />

                    <Space
                        android:id="@+id/barrierHorizontal2"
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtPeriod" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnApplyLoan"
                style="@style/CftButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_confirm" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</LinearLayout>

