<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="?CftCardViewColor"
    app:cardElevation="@dimen/CftCardViewElevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            app:icon="@drawable/ic_arrow_right"
            app:strokeColor="?CftButtonsColor"
            app:iconTint="?CftButtonsColor"
            />
        
        <TextView
            android:id="@+id/txtSumHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/loan_sum"
            android:textSize="@dimen/CftTextHeaderSize"
            app:layout_constraintEnd_toStartOf="@+id/txtSumValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSumValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:textSize="@dimen/CftTextHeaderSize"
            tools:text="10000"
            app:layout_constraintEnd_toStartOf="@+id/btnDetail"
            app:layout_constraintStart_toEndOf="@+id/txtSumHeader"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPercentHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/header_percent"
            android:textSize="@dimen/CftTextHeaderSize"
            app:layout_constraintEnd_toStartOf="@+id/txtPercentValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSumHeader" />

        <TextView
            android:id="@+id/txtPercentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:textSize="@dimen/CftTextHeaderSize"
            tools:text="5%"
            app:layout_constraintEnd_toStartOf="@+id/btnDetail"
            app:layout_constraintStart_toEndOf="@+id/txtPercentHeader"
            app:layout_constraintTop_toBottomOf="@+id/txtSumValue" />

        <TextView
            android:id="@+id/txtPeriodHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/header_period"
            android:textSize="@dimen/CftTextHeaderSize"
            app:layout_constraintEnd_toStartOf="@+id/txtPeriodValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPercentHeader"
            />

        <TextView
            android:id="@+id/txtPeriodValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:textSize="@dimen/CftTextHeaderSize"
            tools:text="60"
            app:layout_constraintEnd_toStartOf="@+id/btnDetail"
            app:layout_constraintStart_toEndOf="@+id/txtPeriodHeader"
            app:layout_constraintTop_toBottomOf="@+id/txtPercentValue"
            />

        <TextView
            android:id="@+id/txtStatusHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/header_status"
            android:textSize="@dimen/CftTextHeaderSize"
            app:layout_constraintEnd_toStartOf="@+id/txtStatusValue"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPeriodHeader"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/txtStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:textSize="@dimen/CftTextHeaderSize"
            tools:text="Одобрено"
            app:layout_constraintEnd_toStartOf="@+id/btnDetail"
            app:layout_constraintStart_toEndOf="@+id/txtStatusHeader"
            app:layout_constraintTop_toBottomOf="@+id/txtPeriodValue"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>